--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{"version": 2, "public": true, "cleanUrls": true, "rewrites": [{"source": "/(.*)", "destination": "/index.html"}]}
+{
+  "version": 2,
+  "public": true,
+  "cleanUrls": true,
+  "outputDirectory": "dist",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
+}
